DS-769: Change from visibility to display to fix accessibility bug

--- a/packages/components/bolt-page-header/src/_page-header-desktop.scss
+++ b/packages/components/bolt-page-header/src/_page-header-desktop.scss
@@ -79,11 +79,6 @@
       pointer-events: all;
     }
 
-    @at-root .c-bolt-page-header__action-trigger--search[aria-expanded='false']
-        ~ #{&} {
-      pointer-events: none;
-    }
-
     &:before {
       content: '';
       opacity: 0.8;
